--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".login.LaunchActivity"
+        <activity android:name="com.zyf.ui.login.LaunchActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Launch">
             <intent-filter>
@@ -87,21 +87,21 @@
         </activity>
 
         <activity
-            android:name=".login.LoginActivity"
+            android:name="com.zyf.ui.login.LoginActivity"
             android:label="@string/title_activity_login">
         </activity>
 
         <activity
-            android:name=".main.MainActivity"
+            android:name="com.zyf.ui.main.MainActivity"
             android:label="@string/app_name">
 
         </activity>
 
-        <activity android:name=".user.message.MessageCenterActivity"/>
+        <activity android:name="com.zyf.ui.user.message.MessageCenterActivity"/>
 
-        <activity android:name=".user.settings.SettingsActivity"/>
+        <activity android:name="com.zyf.ui.user.settings.SettingsActivity"/>
 
-        <activity android:name=".user.settings.AboutUsActivity"/>
+        <activity android:name="com.zyf.ui.user.settings.AboutUsActivity"/>
 
         <activity
             android:name="com.biz.base.FragmentParentActivity"
@@ -110,7 +110,7 @@
             android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name=".web.WebViewActivity"
+        <activity android:name="com.zyf.ui.web.WebViewActivity"
             android:screenOrientation="portrait"
             android:exported="false">
             <intent-filter>
@@ -124,14 +124,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".scan.ScanActivity"/>
+        <activity android:name="com.zyf.ui.scan.ScanActivity"/>
 
-        <activity android:name=".authentication.AuthenticationActivity"/>
+        <activity android:name="com.zyf.ui.authentication.AuthenticationActivity"/>
 
-        <activity android:name=".order.OrderQRCodeActivity"/>
+        <activity android:name="com.zyf.ui.order.OrderQRCodeActivity"/>
 
-        <activity android:name=".goods.address.AddressAddActivity"/>
-        <activity android:name=".order.printer.Activity_DeviceList"
+        <activity android:name="com.zyf.ui.goods.address.AddressAddActivity"/>
+        <activity android:name="com.zyf.ui.order.printer.Activity_DeviceList"
             android:theme="@android:style/Theme.Dialog">
         </activity>
     </application>
