--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,9 @@ buildscript {
         jcenter()
         maven { url 'https://maven.google.com' }
 
-
         maven { url "https://jitpack.io" }
+
+        maven{ url "https://oss.sonatype.org/content/groups/public" }
 
         google()
     }
